# Django-AuthX

./: .gitignore  MANIFEST.in  README.md  README.rst  apps.py  authX_admin.py  authX_forms.py  authX_mixins.py  authX_views.py  pyproject.toml  setup.cfg
authx/: admin.py  apps.py  authX_admin.py  authX_constants.py  authX_decorators.py  authX_forms.py  authX_mixins.py  authX_models.py  authX_settings.py  authX_urls.py  authX_views.py  backends.py  constants.py  decorators.py  forms.py  mixins.py  models.py  settings.py  urls.py  views.py
authx/templates/authX_templates/: login.html
django_authx_system.egg-info/: PKG-INFO  SOURCES.txt
project1/: db.sqlite3
project1/dashboard/templates/: dashboard.html
project1/project1/: settings.py  urls.py
